snippets/Nemerle.Statechart/Tests/testsuite/positive/relocate_state_transition.n
using Nemerle;
using Nemerle.Collections;
using Nemerle.Text;
using Nemerle.Utility;

using System;
using Nemerle.Statechart;

  [statechart(<#

  flags testing;
  //flags debug;
  
  name "relocate state transition";
  
  state A
  {
    a => B;
  }

  state B
  {
    @C: a => A;
    a => C;
  }
  
  state C
  {
  }
  
  #>)]
  public class example
  {
  }

  
  module Test
  {
    Main() : void
    {
      def fsm = example();
      def tester = fsm.GetTester();
      tester.ConsoleTestInit();
      tester.Initiate("A", "EntryA");
      tester.Test("a", ["A"], ["B"]);
      tester.Test("a", ["B"], ["C"]);
      tester.Test("a", ["C"], ["A"]);
      fsm.Terminate();
    }
  }
 
/*
BEGIN-OUTPUT
EntryA
[A]
Ok
Processing a 'a' 
ExitA
EntryB
[B]
Ok
Processing a 'a' 
ExitB
EntryC
[C]
Ok
Processing a 'a' 
ExitC
EntryA
[A]
Ok
END-OUTPUT
*/
