snippets/Nemerle.Statechart/Tests/testsuite/negative/local_transition_cannot_target_self.n
using Nemerle;
using Nemerle.Collections;
using Nemerle.Text;
using Nemerle.Utility;

using System;
using Nemerle.Statechart;

  [statechart(<#

  flags testing;
  //flags debug;
  
  name "local transition cannot target self";
  
    state A
    {
      a (=> A; // E: Local transition "TransitionAToABya" cannot target source vertex
    }
  
  #>)]
  public class example
  {
  }

